src/annotate/strucvars/snapshots/mehari__annotate__strucvars__test__guess_sv_caller_dragen_sv.snap
---
source: src/annotate/strucvars/mod.rs
expression: sv_caller
---
DragenSv {
    version: "07.021.624.3.10.4",
}
