src/annotate/strucvars/snapshots/mehari__annotate__strucvars__test__guess_sv_caller_gcnv.snap
---
source: src/annotate/strucvars/mod.rs
expression: sv_caller
---
Gcnv {
    version: "4.3.0.0",
}
