src/annotate/strucvars/snapshots/mehari__annotate__strucvars__test__guess_sv_caller_manta.snap
---
source: src/annotate/strucvars/mod.rs
expression: sv_caller
---
Manta {
    version: "1.6.0",
}
