src/annotate/strucvars/snapshots/mehari__annotate__strucvars__test__guess_sv_caller_popdel.snap
---
source: src/annotate/strucvars/mod.rs
expression: sv_caller
---
Popdel {
    version: "1.1.2",
}
