src/annotate/strucvars/snapshots/mehari__annotate__strucvars__test__parse_bnd.snap
---
source: src/annotate/strucvars/mod.rs
expression: "Breakend::from_ref_alt_str(\"G\", \"A]17:198982]\")?"
---
chrom: "17"
pos: 198982
ref_base: G
alt_base: A
leading_base: true
left_open: true
pe_orientation: FiveToFive

